# secpro

./: .gitignore  CLAUDE.md  LA25_vpro.dwg  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/notes/: BLACKBOX_FINDINGS.md  DECISOES.md  FILE_CLASSIFICATION.md  QUESTIONS_FOR_HERBERT.md  RELATORIO_FINAL.md
output/: LA25_outer_ordered.json  LA25_vpro_safe_ordered.dwg  LA25_vpro_safe_ordered.dxf  REPORT_WALK_GRAPH.txt
outputs/: LA25_outer_ordered.json  LA25_outer_ordered_simplified.json
outputs/autohotkey/: LA25_draw_polyline.ahk  LA25_draw_polyline_simplified.ahk
outputs/dxf/: LA25_vpro_safe_simplified.dxf
scripts/: README_control_discovery.md  README_generate_vpro_ahk.md  README_run_vpro_ahk.md  convert_sections.py  export_autohotkey.py  extract_edges_and_walk.py  generate_la25_20gon_variants.py  generate_report.py  generate_vpro_ahk_from_libredwg.py  geometry_vpro_safe.py  libredwg_tools.py  preserve_order_walk.py  process_vpro_dxf.py  recover_previous_temp.py  run_vpro_ahk_from_wsl.sh  validate_sections.py  vpro_control_discovery.ahk  vpro_safe_final.py  vpro_safe_order.py  vpro_safe_polar_sort.py  vpro_safe_reorder_dxf.py  write_bare_r12_polyline.py
section/DXF/: LA25.dxf  LA25_region_r12_20gon.dxf  LA25_vpro.dxf  LA25_vpro_r12_lines_lowres.dxf  LA25_vpro_r12_polyline.dxf  LA25_vpro_r12_polyline_lowres.dxf  LA25_vpro_safe.dwg  LA25_vpro_safe.dxf  LA25_vpro_safe_ordered.dxf  LA25_vpro_simplified_160.dxf  LA25_vpro_slots_r12_20gon_2mm.dxf  LA25_vpro_slots_r12_20gon_5mm.dxf  LA25_vpro_slots_r12_20gon_5mm_bare.BAK  LA25_vpro_slots_r12_20gon_5mm_bare.DWG  (+1 more)
(+58 files in other folders)
